[package]
name = "nostr-archive-cursor"
description = "A utility library for iterating over JSON-L archives."
repository = "https://github.com/v0l/nostr-archive-cursor.git"
license = "MIT"
readme = "README.md"
version = "0.2.0"
edition = "2024"

[features]
default = ["db"]
db = ["dep:sled", "dep:nostr-sdk", "dep:chrono"]

[dependencies]
log = "0.4.22"
anyhow = "1.0.89"
hex = "0.4.3"
serde = { version = "1.0.210", features = ["derive"] }
tokio = { version = "1.40.0", default-features = false, features = ["fs", "io-util"] }
serde_json = "1.0.128"
async-compression = { version = "0.4.12", features = ["tokio", "gzip", "zstd", "bzip2"] }
async-stream = "0.3.5"
futures = "0.3.31"
dashmap = "6.1.0"

sled = { version = "0.34.7", optional = true }
nostr-sdk = { version = "0.44.1", default-features = false, optional = true }
chrono = { version = "0.4.42", optional = true }

[dev-dependencies]
tokio = { version = "1.40.0", features = ["full"] }
criterion = { version = "0.7.0", features = ["async_tokio"] }
rand = "0.9.2"

[[bench]]
name = "walk_bench"
harness = false