[package]
name = "nostr-archive-cursor"
description = "A utility library for iterating over JSON-L archives."
repository = "https://github.com/v0l/nostr-archive-cursor.git"
license = "MIT"
readme = "README.md"
version = "0.5.0"
edition = "2024"

[features]
default = []
db = ["dep:nostr-sdk", "dep:chrono", "dep:async-compression", "dep:tokio", "dep:zstd"]
db-sled = ["dep:sled", "db"]
db-rocksdb = ["dep:rocksdb", "db"]
async = ["dep:async-compression", "dep:futures", "dep:tokio"]
stream = ["dep:async-stream"]
sync = ["dep:flate2", "dep:bzip2", "dep:zstd"]

[dependencies]
log = "0.4"
anyhow = "1"
faster-hex = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dashmap = "6.1"

# async compression
tokio = { version = "1", default-features = false, features = ["fs", "io-util"], optional = true }
async-compression = { version = "0.4", features = ["tokio", "gzip", "zstdmt", "bzip2"], optional = true }
async-stream = { version = "0.3", optional = true }
futures = { version = "0.3", optional = true }

# Sync compression for std::thread-based processing
flate2 = { version = "1", optional = true }
bzip2 = { version = "0.6", optional = true }

# Database deps
zstd = { version = "0.13", optional = true }
sled = { version = "0.34", optional = true }
rocksdb = { version = "0.24", optional = true, default-features = false, features = ["zstd"] }
nostr-sdk = { version = "0.44", default-features = false, optional = true }
chrono = { version = "0.4", optional = true }

[[example]]
name = "nostr"
required-features = ["sync", "db-rocksdb"]

[dev-dependencies]
env_logger = "0.11"