[package]
name = "media-report"
version = "0.1.0"
edition = "2021"

[dependencies]
async-compression = "0.4.18"
clap = { version = "4.5.23", features = ["derive"] }
regex = "1.11.1"
serde = { version = "1.0.216", features = ["derive"] }
log = "0.4.22"
tokio = "1.42.0"
tokio-stream = "0.1.17"
url = "2.5.4"
anyhow = "1.0.94"
serde_json = "1.0.133"
reqwest = "0.12.9"
nostr-cursor = { path = ".." }
